<resources>
    <string name="app_name">Duck</string>
    <string name="it_s_a_duck">It\'s a duck!</string>
    <string name="like">Like</string>
    <string name="not_a_real_one">(not a real one)</string>
    <string name="how_do_you_like_your_tea_served">How do you like your tea served?</string>
    <string name="hot">Hot</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
    <string name="cold">cold</string>
</resources>